# ai-tools

./: .gitignore  CMakeLists.txt  LICENSE  README.md
ai/: CMakeLists.txt  test.cpp  tool_test.cpp
ai/include/: ai.h  database.h  file.h  tools.h
ai/src/: ai.cpp  database.cpp  file.cpp  tools.cpp
assets/: ToolWindow.qrc  TrayWindow.qrc
cmake/: make_app.cmake
cmake/entitlements/: apple-events.plist
cmake/plists/: Info.plist.in
dep/: CMakeLists.txt
scripts/: manage.py
system/: CMakeLists.txt  test.cpp
system/include/: entry.h  system.h
system/src/entry/: entry.cpp  entry.mm
system/src/osx/: accessibility.h  accessibilty.mm
system/src/win/: winsys.cpp  winsys.h
ui/: CMakeLists.txt  main.cpp  test.cpp
ui/include/: ai_handler.h  conversation.h  history_item.h  hotkey_handler.h  palette.h  reword.h  style.h  tray.h  uitools.h  widget_creator.h  window_handler.h
ui/src/: conversation.cpp  conversation.ui  history_item.ui  hotkey_handler.cpp  prompt_entry.ui  reword.cpp  reword.ui  tray.cpp  tray_window.ui  uitools.cpp
